--- a/src/css/specific/navigation.css
+++ b/src/css/specific/navigation.css
@@ -12,7 +12,7 @@
   transform: translateX(calc(-1 * var(--nav-width)));
   transition: transform var(--transition-speed-sm) var(--transition-timing);
   width: var(--nav-width);
-  z-index: var(--z-nav);
+  z-index: var(--z-nav-mobile);
 
   @media (--md) {
     border-right: 0;
@@ -22,6 +22,7 @@
     position: sticky;
     top: 0;
     transform: none;
+    z-index: var(--z-nav);
   }
 
   &.active {
